--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
         <a href="./index.html" lang="en">WebStudio</a>
         <ul>
-            <li> <a href="">Студия</a>
+            <li> <a href="./index.html">Студия</a>
             </li>
             <li> <a href="">Портфолио</a>
             </li>
@@ -32,13 +32,11 @@
 
     <!--Main body-->
     <main>
-      <div>
         <section>
             <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button">Заказать услугу</button>
         </section>
-    </div>
-    
+        
     <!--Наши сильные стороны-->
     <section>
         <!--Invisible h2-->
@@ -68,19 +66,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <a href="">
-                    <img src="./images/work1.jpg" alt="Работа на планшете" width="370">
-                </a>  
+                <img src="./images/work1.jpg" alt="Работа на планшете" width="370">
             </li>
             <li>
-                <a href="">
-                    <img src="./images/work2.jpg" alt="Синхронизация с ноутбуком" width="370">
-                </a>
+                <img src="./images/work2.jpg" alt="Синхронизация с ноутбуком" width="370">
             </li>
             <li>
-                <a href="">
-                    <img src="./images/work3.jpg" alt="Палитра цветов" width="370">
-                </a>
+                <img src="./images/work3.jpg" alt="Палитра цветов" width="370">
             </li>
         </ul>
     </section>
@@ -92,22 +84,22 @@
             <li>
                 <img src="./images/demiyanenko.jpg" alt="Игорь Демьяненко" width="270">
                 <h3>Игорь Демьяненко</h3>
-                <h4 lang="en">Product Designer</h4>
+                <p lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/repina.jpg" alt="Ольга Репина" width="270">
                 <h3>Ольга Репина</h3>
-                <h4 lang="en">Frontend Developer</h4>
+                <p lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/tarasov.jpg" alt="Николай Тарасов" width="270">
                 <h3>Николай Тарасов</h3>
-                <h4 lang="en">Marketing</h4>
+                <p lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/ermakov.jpg" alt="Михаил Ермаков" width="270">
                 <h3>Михаил Ермаков</h3>
-                <h4 lang="en">UI Designer</h4>
+                <p lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
@@ -117,12 +109,19 @@
     <footer>
     <a href="./index.html" lang="en">WebStudio</a>
     <address>
-        г. Киев, пр-т Леси Украинки, 26
+        <ul>
+            <li>
+                <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" rel="nofollow noopener noreferrer">
+                    г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </address>
-    <p><a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    </p>
-    <p><a href="tel:+380961111111">+38 096 111 11 11</a>
-    </p>
     </footer>
 
 </body>
