--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <address>
         <ul>
             <li>
-                <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" rel="nofollow noopener noreferrer">
+                <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" target="_blank" rel="nofollow noopener noreferrer">
                     г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li>
