--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!--Main body-->
     <main>
         <section>
-            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
         
