--- a/index.html
+++ b/index.html
@@ -1,128 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
     <!--верхушка сайта-->
     <header>
-        <nav>
+      <nav>
         <a href="./index.html" lang="en">WebStudio</a>
         <ul>
-            <li> <a href="./index.html">Студия</a>
-            </li>
-            <li> <a href="">Портфолио</a>
-            </li>
-            <li> <a href="">Контакты</a>
-            </li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
-        </nav>
+      </nav>
 
-        <ul>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li> <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <!--Main body-->
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        </section>
-        
-    <!--Наши сильные стороны-->
-    <section>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+
+      <!--Наши сильные стороны-->
+      <section>
         <!--Invisible h2-->
         <h2>Наши сильные стороны</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>  
+            <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-        <li>
+          <li>
             <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
             <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
             <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
+          </li>
         </ul>
-    </section>
+      </section>
 
-    <!--Чем мы занимаемся-->
-    <section>
+      <!--Чем мы занимаемся-->
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li>
-                <img src="./images/work1.jpg" alt="Работа на планшете" width="370">
-            </li>
-            <li>
-                <img src="./images/work2.jpg" alt="Синхронизация с ноутбуком" width="370">
-            </li>
-            <li>
-                <img src="./images/work3.jpg" alt="Палитра цветов" width="370">
-            </li>
+          <li>
+            <img src="./images/work1.jpg" alt="Работа на планшете" width="370" />
+          </li>
+          <li>
+            <img src="./images/work2.jpg" alt="Синхронизация с ноутбуком" width="370" />
+          </li>
+          <li>
+            <img src="./images/work3.jpg" alt="Палитра цветов" width="370" />
+          </li>
         </ul>
-    </section>
+      </section>
 
-    <!--Наша команда-->
-    <section>
+      <!--Наша команда-->
+      <section>
         <h2>Наща команда</h2>
         <ul>
-            <li>
-                <img src="./images/demiyanenko.jpg" alt="Игорь Демьяненко" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/repina.jpg" alt="Ольга Репина" width="270">
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/tarasov.jpg" alt="Николай Тарасов" width="270">
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/ermakov.jpg" alt="Михаил Ермаков" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
-            </li>
+          <li>
+            <img src="./images/demiyanenko.jpg" alt="Игорь Демьяненко" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/repina.jpg" alt="Ольга Репина" width="270" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/tarasov.jpg" alt="Николай Тарасов" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/ermakov.jpg" alt="Михаил Ермаков" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
         </ul>
-    </section>
+      </section>
     </main>
 
     <!--Footer-->
     <footer>
-    <a href="./index.html" lang="en">WebStudio</a>
-    <address>
+      <a href="./index.html" lang="en">WebStudio</a>
+      <address>
         <ul>
-            <li>
-                <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" target="_blank" rel="nofollow noopener noreferrer">
-                    г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
+          <li>
+            <a
+              href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
+            >
+              г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-    </address>
+      </address>
     </footer>
-
-</body>
+  </body>
 </html>
